openapi for profile service in progress and other minor changes
