# profile/internal/api/api_middleware.go
@@ -4,6 +4,7 @@ import (
 	"encoding/json"
 	"io"
 	"net/http"
+	s "profile/internal/structs"
 
 	loger "github.com/dredfort42/tools/logprinter"
 	"github.com/gin-gonic/gin"
@@ -21,6 +22,7 @@ const (
 func AuthMiddleware() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var clientType ClientType
+		var errorResponse s.ResponseError
 
 		userToken, _ := c.Cookie("access_token")
 		deviceToken := c.GetHeader("Authorization")
@@ -31,7 +33,9 @@ func AuthMiddleware() gin.HandlerFunc {
 		} else if userToken == "" && deviceToken != "" {
 			clientType = DEVICE
 		} else {
-			c.JSON(http.StatusUnauthorized, gin.H{"error": "Unauthorized"})
+			errorResponse.Error = "invalid_request"
+			errorResponse.ErrorDescription = "Missing or invalid token"
+			c.JSON(http.StatusBadRequest, errorResponse)
 			c.Abort()
 			return
 		}
@@ -43,18 +47,27 @@ func AuthMiddleware() gin.HandlerFunc {
 		case USER:
 			email, err = UserIdentify(userToken)
 			if email == "" || err != nil {
+				errorResponse.Error = "access_denied"
+				errorResponse.ErrorDescription = "Unauthorized"
+				c.JSON(http.StatusUnauthorized, errorResponse)
 				c.Abort()
 				return
 			}
 
 		case DEVICE:
 			if clientID == "" {
+				errorResponse.Error = "invalid_request"
+				errorResponse.ErrorDescription = "Missing client_id"
+				c.JSON(http.StatusBadRequest, errorResponse)
 				c.Abort()
 				return
 			}
 
 			email, err = DeviceIdentify(clientID, deviceToken)
 			if email == "" || err != nil {
+				errorResponse.Error = "access_denied"
+				errorResponse.ErrorDescription = "Unauthorized"
+				c.JSON(http.StatusUnauthorized, errorResponse)
 				c.Abort()
 				return
 			}
